color styles added

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" className="bg-green-900">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+
   </head>
-  <body>
-    <div id="root"></div>
+  <body className="bg-green-900 p-48">
+    <div id="root" className="bg-green-900 p-48"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
