error handling on request failure

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" className="bg-green-900">
+<html lang="en" class="bg-green-900">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
 
   </head>
-  <body className="bg-green-900 p-48">
+  <body className="p-48">
     <div id="root" className="bg-green-900 p-48"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
