--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-green-900">
+<html lang="en" class="bg-bushGreen-shades-600">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
