--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body className="p-48">
-    <div id="root" className="bg-green-900 p-48"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
